--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rc305</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : "Railcasts 305" %></title>
+  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Railcasts 305"
+  %>">
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= yield(:head) %>
 </head>
+
 <body>
-
-<%= yield %>
-
+  <header class="navbar navbar-fixed-top">
+    <nav class="navbar-inner">
+      <div class="container">
+        <%= render 'layouts/navigation' %>
+      </div>
+    </nav>
+  </header>
+  <div id="main" role="main">
+    <div class="container">
+      <div class="content">
+        <div class="row">
+        <div class="span12">
+        <%= render 'layouts/messages' %>
+        <%= yield %>
+      </div>
+      </div>
+        <footer>
+        </footer>
+      </div>
+    </div> <!--! end of .container -->
+  </div> <!--! end of #main -->
 </body>
 </html>
