--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,10 +4,10 @@
     <li><%= link_to('Users', users_path) %></li>
 
     <% if current_user then %>
-      <li><%= link_to('Logout', sessions_path, :method=>'delete') %></li>
+      <li><%= link_to('Logout', logout_path) %></li>
       <li><%= link_to("#{current_user.email}", users_path) %></li>
     <% else %>
-      <li><%= link_to('Login', new_session_path) %></li>
-      <li><%= link_to('Signup', new_user_path) %></li>
+      <li><%= link_to('Login', login_path) %></li>
+      <li><%= link_to('Signup', signup_path) %></li>
     <% end %>
 </ul>
